--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,25 @@
 *.exe
 *.out
 *.app
+
+# Autotools
+config.*
+
+**/.dirstamp
+**/*.lo
+**/*.la
+**/*Test
+
+**/.libs/
+
+
+libmonit/Makefile
+libmonit/libtool
+libmonit/test/Makefile
+
+Makefile
+libmonit/src/stamp-h1
+libmonit/src/xconfig.h
+libtool
+src/stamp-h1
+
